--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1>Site Discontinued</h1>
     <p>
       We regret to inform you that this site has been discontinued due to the
-      expiry of our free tier.
+      expiry of your free tier.
     </p>
     <p>Thank you for your understanding.</p>
   </body>
